[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Weapons/swing/machete swing0002.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0003.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0004.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Weapons/machete.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0001.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0005.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0006.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0007.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0008.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0009.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Weapons/swing/machete swing0010.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Player/Machete.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 25.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Swing",
"speed": 24.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "Rebound",
"speed": 24.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 21 )

[node name="Machete" type="RigidBody2D" groups=["pickable"]]
input_pickable = true
mass = 65535.0
gravity_scale = 10.0
script = ExtResource( 12 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 6, -6 )

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2( 13, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="input_event" from="." to="." method="_input_event"]
[connection signal="mouse_entered" from="." to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_mouse_exited"]
[connection signal="body_entered" from="DeathArea" to="." method="_body_entered"]
